--- a/eng.html
+++ b/eng.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jovane Web Developer">
     <meta name="twitter:description" content="Jovane's Portfolio">
-    <link rel="shortcut icon" type="image/x-icon" href="/jcgsr.github.io/img/jota.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/./img/jota.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -51,7 +51,7 @@
             Hello, I am <strong> Jovane Rocha </strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">front-end dev</p><!-- Services -->
-        <img src="/jcgsr.github.io/img/jovane&amp;diana.jpg" alt="Jovane's Picture" class="intro__img"
+        <img src="./img/jovane&amp;diana.jpg" alt="Jovane's Picture" class="intro__img"
         data-aos="fade-left">
     </section>
 
@@ -105,7 +105,7 @@
                 Paul), Whiskey Drinker. I currently live in Aracaju, but crazy to go back to Pernambuco. Linux user since always, using Ubuntu since 2018. Studying Vue.js to be able to achieve my goal of becoming a professional programmer. 
             </p>
         </div><!-- My Work -->
-        <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
+        <img src="./img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
         alt="Semi opened laptop" class="about-me__img">
     </section>
 
@@ -118,55 +118,56 @@
 
             <!-- Portfolio item 01 -->
             <a href="https://quirky-fermi-9dd416.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/piriquitaWebApp.png" alt="Site da Piriquita" class="portfolio__img">
+                <img src="./img/piriquitaWebApp.png" alt="Site da Piriquita" class="portfolio__img">
             </a>
             <!-- Portfolio item 02 -->
             <a href="https://dreamy-mestorf-f645a7.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/tarefaJS.png" alt="Lista Tarefa JS" class="portfolio__img">
+                <img src="./img/tarefaJS.png" alt="Lista Tarefa JS" class="portfolio__img">
             </a>
             <!-- Portfolio item 03 -->
             <a href="https://goofy-poincare-70cae0.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/mediaEscolarWebApp.png" alt="Média Escolar" class="portfolio__img">
+                <img src="./img/mediaEscolarWebApp.png" alt="Média Escolar" class="portfolio__img">
             </a>
             <!-- Portfolio item 04 -->
             <a href="https://cocky-kalam-e5a441.netlify.com/index.html" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/afinadorWebApp.png" alt="Afinador de Violão" class="portfolio__img">
+                <img src="./img/afinadorWebApp.png" alt="Afinador de Violão" class="portfolio__img">
             </a>
             <!-- Portfolio item 05 -->
             <a href="https://www.meusescritos.com.br/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/meusescritos.png" alt="Meus Escritos" class="portfolio__img">
+                <img src="./img/meusescritos.png" alt="Meus Escritos" class="portfolio__img">
             </a>
             <!-- Portfolio item 06 -->
-            <a href="https://naughty-wescoff-cae4d2.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/hcode.png" alt="Hcode-CalculadoraJS" class="portfolio__img">
+            <a href="https://www.camylleazevedo.com.br/" class="portfolio__item">
+                <img src="./img/camylle.png" alt="Site de Camylle" class="portfolio__img">
             </a>
+ 
             <!-- Portfolio item 07 -->
             <a href="https://www.susipessoa.com.br/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/susi.png" alt="Susi" class="portfolio__img">
+                <img src="./img/susi.png" alt="Susi" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 08 -->
             <a href="https://www.u-vue.com.br/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/U-Vue.png" alt="Conversor JS" class="portfolio__img">
+                <img src="./img/U-Vue.png" alt="Conversor JS" class="portfolio__img">
             </a>
             <!-- Portfolio item 09-->
             <a href="https://unruffled-golick-3d3bc9.netlify.app/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/ListaTarefaVue.png" alt="Lista de Tarefa Vue" class="portfolio__img">
+                <img src="./img/ListaTarefaVue.png" alt="Lista de Tarefa Vue" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 10-->
             <a href="https://zealous-bohr-5f2b4a.netlify.app/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
+                <img src="./img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 11 -->
             <a href="https://practical-engelbart-d9a318.netlify.app/" class="portfolio__item">>
-                <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
+                <img src="./img/delicia.png" alt="Personal Trainer" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 12 -->
             <a href="https://brave-fermat-7d8989.netlify.app/" class="portfolio__item">>
-                <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
+                <img src="./img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
 
         </div>
