--- a/eng.html
+++ b/eng.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Jovane Cabral Guerra da Silva Rocha" />
     <meta
       name="keywords"
-      content="Jovane, Portfolio, Web Developer, Vue.js, Translator, Teacher, English, Aracaju"
+      content="Jovane, Portfolio, Web Developer, React, Vue.js, Translator, Teacher, English, Aracaju"
     />
     <meta property="og:title" content="Jovane Web Developer" />
     <meta name="twitter:card" content="summary" />
