--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Jovane Cabral Guerra da Silva Rocha" />
     <meta
       name="keywords"
-      content="Jovane, Portfólio, Desenvolvedor Web, Vue.js, Tradutor, Professor, Inglês, Aracaju"
+      content="Jovane, Portfólio, Desenvolvedor Web, React, Vue.js, Tradutor, Professor, Inglês, Aracaju"
     />
     <meta property="og:title" content="Jovane Desenvolvedor Web" />
     <meta name="twitter:card" content="summary" />
