--- a/eng.html
+++ b/eng.html
@@ -121,11 +121,12 @@
       <div class="about-me__body">
         <p>
           Born in the State of Pernambuco, in the city of Recife, Alvirrubro,
-          Father (dazzled) of Diana, Vegetarian, Animal Rights Defender , Chess
-          Player, Schopenhaurian, Socratic, Guitarist (admirer of Les Paul),
-          Whiskey Drinker. I currently live in Aracaju, but crazy to go back to
-          Pernambuco. Linux user since always, using Ubuntu since 2018. Studying
-          Vue.js to be able to achieve my goal of becoming a professional
+          Father (dazzled) of Diana, Beethoven, Mozart, Brenda, Nina and Mia,
+          Vegetarian, Animal Rights Defender , Chess Player, Schopenhaurian,
+          Socratic, Guitarist (admirer of Les Paul), Whiskey Drinker. I
+          currently live in Aracaju, but crazy to go back to Pernambuco. Linux
+          user since always, using Ubuntu since 2018. Studying Vue, React and
+          C++ to be able to achieve my goal of becoming a professional
           programmer.
         </p>
       </div>
@@ -230,13 +231,11 @@
         </a>
 
         <!-- Portfolio item 10-->
-        <a
-          href="https://zealous-bohr-5f2b4a.netlify.app/"
-          class="portfolio__item"
-        >
+        <!-- Portfolio item 10 -->
+        <a href="https://www.englisheasyfm.com.br/" class="portfolio__item">
           <img
-            src="./img/ConversorVue.png"
-            alt="Conversor Vue"
+            src="./img/englisheasy.png"
+            alt="English Easy"
             class="portfolio__img"
           />
         </a>
