--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
       <div class="about-me__body">
         <p>
           Pernambucano do Recife, Alvirrubro, Pai (abestalhado) de Diana,
-          Beethoven, Mozart, Brenda Nina e Mia, Vegetariano, Defensor dos
+          Beethoven, Mozart, Brenda, Nina e Mia, Vegetariano, Defensor dos
           Direitos dos Animais, Enxadrista, Schopenhauriano, Socrático,
           Guitarrista (admirador da Les Paul), Bebedor de Whisky. Atualmente,
           moro em Aracaju, mas doido para voltar para Pernambuco. Usuário Linux
-          desde sempre, usando Ubuntu. Estudando Vue.js para poder realizar meu
-          objetivo de me tornar um programador profissional.
+          desde sempre, usando Ubuntu. Estudando Vue, React e C++ para poder
+          realizar meu objetivo de me tornar um programador profissional.
         </p>
       </div>
       <img
@@ -222,13 +222,10 @@
         </a>
 
         <!-- Portfolio item 10 -->
-        <a
-          href="https://zealous-bohr-5f2b4a.netlify.app/"
-          class="portfolio__item"
-        >
+        <a href="https://www.englisheasyfm.com.br/" class="portfolio__item">
           <img
-            src="./img/ConversorVue.png"
-            alt="Conversor Vue"
+            src="./img/englisheasy.png"
+            alt="English Easy"
             class="portfolio__img"
           />
         </a>
