--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         data-aos="fade-left"
       />
     </section>
-
+<a href="https://jovane.netlify.app">visite o novo portfólio</a>
     <!-- Services -->
     <section class="my-services" id="services" data-aos="fade-right">
       <h2 class="section__title section__title--services">O que eu faço</h2>
